--- a/book-library/src/main/resources/application.properties
+++ b/book-library/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/${BOOK_LIBRARY_DB_NAME}
+spring.datasource.username=${BOOK_LIBRARY_DB_USER_NAME}
+spring.datasource.password=${BOOK_LIBRARY_DB_USER_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
