Add OpenAPI documentation to routes

--- a/book-library/src/main/resources/application.properties
+++ b/book-library/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=${BOOK_LIBRARY_DB_USER_NAME}
 spring.datasource.password=${BOOK_LIBRARY_DB_USER_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+springdoc.api-docs.path=/api/book-library/docs
