Implement basic Orders service without stock verification

--- a/book-library/src/main/resources/application.properties
+++ b/book-library/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${BOOK_LIBRARY_PORT}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/${BOOK_LIBRARY_DB_NAME}
 spring.datasource.username=${BOOK_LIBRARY_DB_USER_NAME}
