--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-server.port=8081
+server.port=${ORDERS_PORT}
+spring.data.mongodb.host=localhost
+spring.data.mongodb.authentication-database=${ORDERS_DB_AUTH_DB_NAME}
+spring.data.mongodb.username=${ORDERS_DB_USER_NAME}
+spring.data.mongodb.password=${ORDERS_DB_USER_PASSWORD}
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=${ORDERS_DB_NAME}
+springdoc.api-docs.path=/api/orders/docs
